--- a/css/style.css
+++ b/css/style.css
@@ -542,6 +542,7 @@ span {
 	.contact-img img {
 		width: 100%;
 		margin-top: 3rem;
+		flex-direction: column-reverse; 
 	}
 }
 
@@ -553,15 +554,6 @@ span {
 	.about-img img {
 		width: 90vw;
 		
-	}
-
-	.contact-info {
-		flex-directions: column;
-	}
-	
-	.contact-img img {
-		width: 80vw;
-		margin-top: 3rem;
 	}
 	
 	.footer {
