--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,10 @@ span {
 	transition: .5s ease;
 }
 
+.social.media img {
+	width: 2.5rem;
+}
+
 .social-media a:hover {
 	background: var(--main-color);
 	color: var(--second-bg-color);
