--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,10 @@ span {
 	box-shadow: 0 0 1rem var(--main-color);
 }
 
+.social-media img {
+	width: 2rem;
+}
+
 /*.btn {
 	display: inline-block;
 	padding: 1rem 2.8rem;
