--- a/css/style.css
+++ b/css/style.css
@@ -157,9 +157,9 @@ span {
 	box-shadow: 0 0 1rem var(--main-color);
 }
 
-.social-media img {
+/*.social-media img {
 	width: 2rem;
-}
+}*/
 
 /*.btn {
 	display: inline-block;
