--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ span {
 	font-size: 2rem;
 	color: var(--main-color);
 	margin: 3rem 1.5rem 3rem 0;
+	border: 2px solid var(--main-color);
 	transition: .5s ease;
 }
 
