--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ html {
 body {
 	background: var(--bg-color);
 	color: var(--text-color);
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 section {
