--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
 
 section {
 	min-height: 100vh;
-	padding: 10rem 9% 2rem;
+	padding: 10rem 9% 1rem;
 }
 
 
@@ -95,7 +95,7 @@ section {
 
 .home-img img {
 	width: 35vw;
-	margin-left: 50;
+	margin-left: 20px;
 	animation: floatImage 4s ease-in-out infinite;
 	/*margin-bottom: -16;*/
 }
