--- a/css/style.css
+++ b/css/style.css
@@ -162,9 +162,9 @@ span {
 	box-shadow: 0 0 1rem var(--main-color);
 }
 
-/*.social-media img {
+.social-media img {
 	width: 2rem;
-}*/
+}
 
 /*.btn {
 	display: inline-block;
