--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ span {
 	
 }
 
-.contact-section {
+/*.contact-section {
 	background: #fff;
 	padding: 50px 20px;
 }
@@ -306,7 +306,7 @@ span {
 	color: #666;
 	max-width: 600px;
 	margin: 0 auto 20px;
-}
+}*/
 
 .contact-info {
 	margin-top: 70px;
