--- a/css/style.css
+++ b/css/style.css
@@ -148,12 +148,11 @@ span {
 	width: 4rem;
 	height: 4rem;
 	background: transparent;
-	border: .2rem solid var(--main.color);
+	border: .2rem solid var(--main-color);
 	border-radius: 50%;
 	font-size: 2rem;
 	color: var(--main-color);
 	margin: 3rem 1.5rem 3rem 0;
-	border: .2rem solid var(--main.color);
 	transition: .5s ease;
 }
 
