--- a/css/style.css
+++ b/css/style.css
@@ -534,8 +534,11 @@ span {
 	}
 	
 	.contact-img img {
-		width: 100vw;
+		width: 400px;
+		height: 250px;
+		object-fit: cover;
 		margin-top: 3rem;
+		flex-direction: column-reverse;
 	}
 
 }
@@ -565,6 +568,14 @@ span {
 	.about-img img {
 		width: 90vw;
 		
+	}
+
+	.contact-img img {
+		width: 400px;
+		height: 250px;
+		object-fit: cover;
+		margin-top: 3rem;
+		flex-direction: column-reverse;
 	}
 	
 	.footer {
