--- a/css/style.css
+++ b/css/style.css
@@ -571,8 +571,8 @@ span {
 	}
 
 	.contact-img img {
-		width: 400px;
-		height: 250px;
+		width: 100%;
+		height: 100%;
 		object-fit: cover;
 		margin-top: 3rem;
 		/*flex-direction: column-reverse;*/
