--- a/css/style.css
+++ b/css/style.css
@@ -533,13 +533,13 @@ span {
 		flex-direction: column-reverse;
 	}
 	
-	.contact-img img {
+	/*.contact-img img {
 		width: 400px;
 		height: 250px;
 		object-fit: cover;
 		margin-top: 3rem;
-		/*flex-direction: column-reverse;*/
-	}
+		flex-direction: column-reverse;
+	}*/
 
 }
 
