--- a/css/style.css
+++ b/css/style.css
@@ -394,7 +394,7 @@ span {
 	align-items: center;
 	flex-wrap: wrap;
 	padding: 2rem 9%;
-	background: var(--second-bg-color);
+	background: var(--bg-color);
 	
 }
 
