--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ span {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	transform: translate(-50%, -50%) rotate(-45deg);
+	/*transform: translate(-50%, -50%) rotate(-45deg);*/
 	background: url('https://github.com/user-attachments/assets/09aed28d-0e10-4749-999a-e8eca585a06e') no-repeat center center;
 	background-size: contain; /* O cover, según tus necesidades */
 	opacity: 0.2; /* Ajusta la transparencia de la marca de agua */
