--- a/css/style.css
+++ b/css/style.css
@@ -59,11 +59,16 @@ section {
 }
 
 .logo {
+	header: 30rem
 	font-size: 2.5rem;
 	color: var(--text-color);
 	font-weight: 600;
 	cursor: default;
 	
+}
+
+.header img {
+	height: 50px;
 }
 
 .navbar a {
