--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ section {
 }
 
 .logo {
-	margin-right: 30rem
+	margin-right: 30rem;
 	font-size: 2.5rem;
 	color: var(--text-color);
 	font-weight: 600;
